# pydrcom

./: .gitignore  CHANGELOG.md  Pipfile  README.md  debug.py  pyproject.toml  setup.py
doc/: dev-note-new.md  dev-note-old.md
docs/: description  hotfix-1.0.0-1.0.1.md  index.rst  mkpkt.rst  troubleshooting.rst
drcom/: __init__.py  __main__.py  analyse.py  app.py  config.py  context.py  drcom.conf  drcom.conf.temp  drcom.py  entry.py  exceptions.py  log.py  utils.py
drcom/toml/: encoder.py
old/: PyDrcom3-lan.py  PyDrcom3-pppoe.py  README.md  latest-wired-python3.py  pyDrcom3.py
scripts/: pyinstall-win.ps1  pyinstall.sh
scripts/systemd/: drcom.service
