[tool.poetry]
name = "pydrcom"
version = "3.1.2"
description = "Python 实现的 Drcom 客户端，适用于 D 版"
authors = ["zombie110year <zombie110year@outlook.com>"]
license = "GPLv3"
readme = "README.md"
repository = "https://github.com/zombie110year/pydrcom"
homepage = "https://github.com/zombie110year/pydrcom"

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
pyinstaller = "^3.5"
pylint = "^2.3"
autopep8 = "^1.4"

[[tool.poetry.source]]
name = "tsinghua"
url = "https://pypi.tuna.tsinghua.edu.cn/simple/"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
