[tool.poetry]
name = "pydrcom"
version = "3.1.3"
description = "Python 实现的 Drcom 客户端，适用于 D 版"
authors = ["zombie110year <zombie110year@outlook.com>"]
license = "GPLv3"
readme = "README.md"
repository = "https://github.com/zombie110year/pydrcom"
homepage = "https://github.com/zombie110year/pydrcom"

packages = [
    {include = "drcom"}
]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
pyinstaller = "^3.5"
pylint = "^2.3"
autopep8 = "^1.4"
# pyinstaller 在 Windows 平台上的依赖
pywin32-ctypes = "^0.2.0"
pefile = "^2019.4"

[[tool.poetry.source]]
name = "tsinghua"
url = "https://pypi.tuna.tsinghua.edu.cn/simple/"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
